# scale_theory

./: .gitignore  CMakeLists.txt  scales.txt
src/: CMakeLists.txt  chords.rst  conf.py  conf.py.in  diminished.rst  harmonic.rst  index.rst  melodic.rst  natural.rst  scales.rst
